--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Entorno de la aplicación
-CI_ENVIRONMENT = development
+CI_ENVIRONMENT = production
 
 ZENDESK_APP_INSTALLATION_ID="https://atelierdehoteles.zendesk.com/api/v2/apps/installations/28666254387092.json"
 ZENDESK_APP_INSTALLATION_ID_LOCAL="https://atelierdehoteles.zendesk.com/api/v2/apps/installations/29010367081236.json"
