--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /docs/
 /writable/*
 
+# ENV
+/.env
+
 # you may install these packages with `oil package`.
 # http://fuelphp.com/docs/packages/oil/package.html
 # /fuel/packages/auth/
