--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /writable/*
 
 # ENV
-/.env
+.env
 
 # you may install these packages with `oil package`.
 # http://fuelphp.com/docs/packages/oil/package.html
